3. Updating to correct center alignment

--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -8,8 +8,9 @@
 	border-radius: 4px;
 	display: flex;
 	justify-content: flex-end;
+	align-items: center;
 }
-button {
+.filters button {
 	font-size: 18px;
 	color: #FFFFFF;
 	background-color: #FF5A5F;
